fixes + Missions command