@@ -16,17 +16,18 @@ import emanondev.deepquests.interfaces.Require;
 import emanondev.deepquests.player.QuestPlayer;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
 import java.util.List;
 
 public class SkillAPILevelRequireType extends ARequireType<QuestPlayer> {
 
+    private static final String ID = "skillapi_level";
+
     public SkillAPILevelRequireType(QuestManager<QuestPlayer> manager) {
         super(ID, manager);
     }
-
-    private static final String ID = "skillapi_level";
 
     @Override
     public Material getGuiMaterial() {
@@ -35,7 +36,7 @@ public class SkillAPILevelRequireType extends ARequireType<QuestPlayer> {
 
     @Override
     public List<String> getDescription() {
-        return Arrays.asList("&7Player require a certain lv on a skillAPI class");
+        return List.of("&7Player require a certain lv on a skillAPI class");
     }
 
     @Override
@@ -45,14 +46,14 @@ public class SkillAPILevelRequireType extends ARequireType<QuestPlayer> {
 
     public class SkillAPILevelRequire extends ARequire<QuestPlayer> {
 
-        private SkillAPIClassData<QuestPlayer, SkillAPILevelRequire> skillData = null;
-        private AmountData<QuestPlayer, SkillAPILevelRequire> amountData = null;
+        private final SkillAPIClassData<QuestPlayer, SkillAPILevelRequire> skillData;
+        private final AmountData<QuestPlayer, SkillAPILevelRequire> amountData;
 
         public SkillAPILevelRequire(int id, QuestManager<QuestPlayer> manager, YMLSection section) {
             super(id, manager, SkillAPILevelRequireType.this, section);
-            skillData = new SkillAPIClassData<QuestPlayer, SkillAPILevelRequire>(this,
+            skillData = new SkillAPIClassData<>(this,
                     getConfig().loadSection(Paths.REQUIRE_INFO_JOBDATA));
-            amountData = new AmountData<QuestPlayer, SkillAPILevelRequire>(this,
+            amountData = new AmountData<>(this,
                     getConfig().loadSection(Paths.REQUIRE_INFO_AMOUNT), 1, Integer.MAX_VALUE, 1);
         }
 
@@ -73,9 +74,9 @@ public class SkillAPILevelRequireType extends ARequireType<QuestPlayer> {
                 return false;
             try {
                 PlayerClass[] array = data.getClasses().toArray(new PlayerClass[0]);
-                for (int i = 0; i < array.length; i++) {
-                    if (array[i] != null && skillData.isValidRPGClass(array[i].getData())
-                            && array[i].getLevel() >= amountData.getAmount())
+                for (PlayerClass playerClass : array) {
+                    if (playerClass != null && skillData.isValidRPGClass(playerClass.getData())
+                            && playerClass.getLevel() >= amountData.getAmount())
                         return true;
 
                 }
@@ -86,7 +87,7 @@ public class SkillAPILevelRequireType extends ARequireType<QuestPlayer> {
         }
 
         @Override
-        public List<String> getInfo() {
+        public @NotNull List<String> getInfo() {
             List<String> info = super.getInfo();
             info.addAll(skillData.getInfo());
             info.add("&9Required Level: &e" + amountData.getAmount());
@@ -94,7 +95,7 @@ public class SkillAPILevelRequireType extends ARequireType<QuestPlayer> {
         }
 
         @Override
-        public Gui getEditorGui(Player target, Gui parent) {
+        public @NotNull Gui getEditorGui(Player target, Gui parent) {
             return new GuiEditor(target, parent);
         }
 
@@ -102,10 +103,10 @@ public class SkillAPILevelRequireType extends ARequireType<QuestPlayer> {
 
             public GuiEditor(Player player, Gui previusHolder) {
                 super(player, previusHolder);
-                this.putButton(27, skillData.getGroupButton(this));
-                this.putButton(28, skillData.getRPGClassButton(this));
+                this.putButton(27, getSkillAPITypeData().getGroupButton(this));
+                this.putButton(28, getSkillAPITypeData().getRPGClassButton(this));
                 this.putButton(29,
-                        amountData.getAmountEditorButton("&9Select required Level",
+                        getAmountData().getAmountEditorButton("&9Select required Level",
                                 Arrays.asList("&6Required Level Selector", "&9Level: &e%amount%"),
                                 new ItemBuilder(Material.REPEATER).setGuiProperty().build(), this));
             }
